{
    "name": "RoomInputActions",
    "maps": [
        {
            "name": "PlayspaceNavigation",
            "id": "52d0b7d5-e111-47e4-afd0-33b1463659ed",
            "actions": [
                {
                    "name": "GoBack",
                    "type": "Button",
                    "id": "565355c4-0eb3-45fc-8de5-d49a37b82ee1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "GoHome",
                    "type": "Button",
                    "id": "c04d1551-4232-4370-86f0-19c975160d0f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eed44973-7cde-4ae9-9b57-62c62ab67eef",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04251652-8b83-4a10-a23c-6f494e53cef2",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}